Areas (#701)
* Add database entries for semi random areas

* Bump version number to 4.14.0

* Use enhanced switch

* Organise imports

* Start new `/tardisarea [create|add] [name]` commands

* Get semi-random location for non-grid TARDIS areas

* Start PLAYGROUND console

* Add config option for force loading police box chunks - `police_box.keep_chunk_force_loaded: [true|false]`

* Add a `tardisadmin mvimport` command to transfer worlds from Multiverse to the TARDIS planets config

* Fix Genetic GUI errors

* Update todo.md

* Switch to recommended / future proof way of checking for floodgate

* Starts TIPs next configuration

* Update playground.tschm

* Use Java 11 HttpClient/Request/Response

* Use parameterized HttpResponse class

* Remove Mechanical engine item frame when changing desktop theme

* Add 1.19.3 downloads to readme

* Fix some floodgate textures and errors

Make sure the Genetic Manipulator door opens if the player just closes the GUI!

* Add an Edit Areas GUI for non-grid area locations

* Experiment with Item frame interior viewing

* Meh

* Add `/tdev` command to test interior view capturing

* Gson can't de/serialize Color without a little help

* Raytrace the correct location

* Hmm, maybe a TARDIS monitor instead?

Too hard to adapt the Police Box model to accommodate item frames so they look okay...

* Add recipes for TARDIS Monitor and frame

* Start implementing TARDIS Monitor

* `/tardis update` for MONITOR and MONITOR_FRAME

* Fix ColorTypeAdapter storing wrong value for Red

* Finish `/tardis update` for MONITOR and MONITOR_FRAME

* Change the folder name for stored snapshots

* Make sure we can re-render monitor maps

* Actually fix `Illegal characters in chat` for `/tardissay`

* #700 Add Lock button to floodgate Chameleon form

* No really, actually fix translations

* Remove redundant message

* Can't search the db by Location convert to String first

* 